# innotter_microservice

./: Dockerfile  consumer.py  docker-compose.yml  pyproject.toml  run_queue.sh  run_server.sh
app/: main.py
app/core/: enum_classes.py  settings.py
app/schemas/: stats.py
app/services/: dynamodb_service.py  values_dynamodb.py
logics/: manage_db.py
