[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["…"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
sqlalchemy = "^1.4.42"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
pika = "^1.3.1"
boto3 = "^1.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"